--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
   "engines": {
-    "node": ">=10.14.2"
+    "node": ">=10.15.1",
+    "yarn": ">=1.13.0"
   },
   "scripts": {
     "analyze": "source-map-explorer build/static/js/main.*",
@@ -21,7 +22,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write **/*.{js,json,less,md}",
     "extract-translations": "i18next-scanner --config i18next-scanner.config.js 'src/**/*.js'",
-    "lint": "node ./node_modules/eslint/bin/eslint.js --ext .js src/ storybook/",
+    "lint": "node ./node_modules/eslint/bin/eslint.js '**/*.js'",
     "start": "npm-run-all -p watch-less start-js",
     "start-js": "react-scripts start",
     "storybook": "npm-run-all -p storybook:start watch-less",
@@ -30,13 +31,30 @@
     "test": "react-scripts test --env=jsdom",
     "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\""
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "yarn lint --fix",
+      "git add"
+    ],
+    "*.{js,json,less,md}": [
+      "yarn format",
+      "git add"
+    ]
+  },
   "devDependencies": {
     "@storybook/addon-actions": "4.1.11",
     "@storybook/addons": "4.1.11",
     "@storybook/react": "4.1.11",
     "babel-core": "6.26.3",
+    "husky": "^1.3.1",
     "i18next-scanner": "2.9.1",
     "less": "3.9.0",
+    "lint-staged": "^8.1.3",
     "nodemon": "1.18.10",
     "npm-run-all": "4.1.5",
     "prettier": "1.16.4",
